<resources>
    <string name="app_name">Rokad Mart</string>
    <string name="message">Message</string>
    <string name="close">Close</string>
    <string name="Open">Open</string>
    <string name="Close">Close</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="hint_mobile_number">Enter your mobile number</string>
    <string name="hint_password">Password</string>
    <string name="error_empty_password">Password required.</string>
    <string name="error_empty_confirm_password">Confirm password required.</string>
    <string name="mismatch_confirm_password">Your password and confirmation password do not match.</string>
    <string name="required_mobile_number">Phone number required</string>
    <string name="error_mobile_number">Please enter valid mobile number.</string>
    <string name="error_last_name">Please enter last name minimum of 3 characters</string>
    <string name="register_left">Don\'t have an account?</string>
    <string name="login_left">Have an account?</string>
    <string name="register_right">Sign Up</string>
    <string name="login_right">Login</string>
    <string name="proceed_to_pay">proceed to pay</string>
    <string name="forgot_password">Forgot Security Pin?</string>
    <string name="full_name">Full Name</string>
    <string name="last_name">Last Name</string>
    <string name="time_out_title">Time out error</string>
    <string name="time_out_msg">Check your network connection and try again.</string>
    <string name="internet_failed_login_case">Please recheck your credentials entered, your stable internet connection and try again</string>
    <string name="server_failed_case"> Looks like something has gone wrong. Please try logging back in sometime.</string>
    <string name="invalid_mobile_number_alert">Please enter valid phone number.</string>
    <string name="phone_number_check_msg">Please enter a valid phone number</string>
    <string name="internet_check">Please check your Internet Connection.</string>
    <string name="invalid_password_alert">Please enter valid password.</string>
    <string name="error_full_name">Please enter first name minimum of 3 characters</string>
    <string name="hint_conform_password">Confirm Password</string>
    <string name="hint_conform_new_password">Confirm new password</string>
    <string name="hint_mail">Enter your E-Mail</string>
    <string name="required_mail">Email required .</string>
    <string name="error_mail">Please enter valid email.</string>
    <string name="error_mobile">Please enter valid Mobile Number.</string>
    <string name="error_password">Please enter valid Password.</string>
    <string name="verification_code">Verification Code</string>
    <string name="verification_code_mobile_hint">Please enter the verification code sent to %1$s</string>
    <string name="otp">OTP</string>
    <string name="resend_otp">Resend OTP?</string>
    <string name="send_otp">Send OTP</string>
    <string name="change_password">Set Security Pin</string>
    <string name="subchange_password">Please enter your 4 digit security pin</string>
    <string name="forgot_message">Please Enter your register mobile number, to reset your password</string>
    <string name="subchange_password2">Set your new password</string>
    <string name="from_date">From Date</string>
    <string name="to_date">To Date</string>
    <string name="hint_current_password">Current Password</string>
    <string name="hint_new_password">New Password</string>
    <string name="category"><![CDATA[Grocery & Staples]]></string>
    <string name="sub_title_1">4 Sub Catergories</string>
    <string name="sub_title_2">125 Products</string>
    <string name="strikeout"> <strike> %1$s </strike> </string>
    <string name="total_categories">%1$d Categories</string>
    <string name="category_list">My Category list</string>
    <string name="sub_category_list">My sub category list</string>
    <string name="my_product_list_from_library">My Products</string>
    <string name="my_product_list_from_inventory">Inventory Products </string>
    <string name="my_product_list">My Products List </string>
    <string name="total_products">%1$d %2$s Products</string>
    <string name="total_sub_categories">6 Sub Categories</string>
    <string name="product_name">Aashirvaad Atta</string>
    <string name="product_unit">1 KG</string>
    <string name="offer">%1$s \nOff</string>
    <string name="offer_single_line">%1$s\nOff</string>
    <string name="product_description">Product Description</string>
    <string name="product_regional_name">Product Regional Name</string>
    <string name="product_regional_name_value">Neque porro</string>
    <string name="product_expiry_title">Expiry</string>
    <string name="product_expiry_title_value">12 Aug 2023</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="choose_category">Choose Category *</string>
    <string name="choose_sub_category">Choose Sub Category *</string>
    <string name="choose_product">Choose Product</string>
    <string name="product_brand">Product Brand</string>
    <string name="upload_product_images">Upload Product Images</string>
    <string name="product_video_link">Product Video Link</string>
    <string name="add_units_">Add Units *</string>
    <string name="add_units_text">Add Units </string>
    <string name="add_units">+ For Customer</string>
    <string name="delivery_days">Delivery Days</string>
    <string name="expiry_">Expiry Date *</string>
    <string name="expiry">Expiry </string>
    <string name="unit_info">Unit Info</string>
    <string name="units">Units</string>
    <string name="price">Price</string>
    <string name="discount">Discount in %</string>
    <string name="save">Save</string>
    <string name="is_active">In Stock</string>
    <string name="active">Out of stock</string>
    <string name="open_orders">Open Orders</string>
    <string name="packed_orders">Packed Orders</string>
    <string name="canceled_orders">Cancel Order</string>
    <string name="all_orders">All Orders</string>
    <string name="total_orders">Total you have %1$s %2$s</string>
    <string name="order_id">Order ID</string>
    <string name="data">Data</string>
    <string name="products">Products</string>
    <string name="status_order">Status: %1$s Order</string>
    <string name="payment_info">Payment Info</string>
    <string name="mode_of_payment">Mode of Payment:</string>
    <string name="security_pin">Enter Security Pin</string>
    <string name="confirm_security_pin">Confirm 4 digit Security pin</string>
    <string name="delivery_charges">Delivery Charges:</string>
    <string name="discount_amount">Discount :</string>
    <string name="delivery_charge">Delivery Charges</string>
    <string name="order_amount">Order Amount:</string>
    <string name="quantity">Quantity:</string>
    <string name="quantity_id">Quantity</string>
    <string name="unit">Unit :</string>
    <string name="cost">Cost :</string>
    <string name="products_ordered">Products Ordered </string>
    <string name="accept">Accept</string>
    <string name="shipped_orders">Shipped Orders</string>
    <string name="delivered_orders">Delivered Orders</string>
    <string name="returned_orders">Returned Orders</string>
    <string name="accepted_orders">Accepted Orders</string>
    <string name="cancel">Cancel</string>
    <string name="shipped">Shipped</string>
    <string name="packed">Packed</string>
    <string name="delivered">Delivered</string>
    <string name="open">Open</string>
    <string name="accepted">Accepted</string>
    <string name="returned">Returned</string>
    <string name="canceled">Cancelled</string>
    <string name="my_orders">My Orders</string>
    <string name="inventory">My Inventory</string>
    <string name="logout">Logout</string>
    <string name="Electricity_service">Electricity</string>
    <string name="mobile_service">Mobile Recharge</string>
    <string name="verify_customer">Verify Customer</string>
    <string name="please_enter_received_amount">Please enter received amount.</string>
    <string name="received_amount_error">Received amount: %1$s and the Order amount: %2$s is not equal.\n Please check and re-enter again.</string>
    <string name="error_enpty_received_amount">Please enter valid received amount.</string>
    <string name="please_enter_your_first_name">Please enter your first name</string>
    <string name="please_enter_your_last_name">Please enter your last name</string>
    <string name="please_enter_your_e_mail">Please enter your e-mail</string>
    <string name="retailer_details">RETAILER DETAILS</string>
    <string name="enter_your_business_name">Shop Name</string>
    <string name="enter_your_pan_number">Enter your PAN number</string>
    <string name="enter_your_bank_acc_no">Enter your Bank Acc No.</string>
    <string name="enter_your_bank_acc_name">Enter your Bank Name.</string>
    <string name="enter_your_bank_ifsc_code">Enter your IFSC Code</string>
    <string name="enter_your_bank_branch">Enter Bank Branch Name</string>
    <string name="enter_your_gst_number">Enter your GST number</string>
    <string name="location_details">LOCATION DETAILS</string>
    <string name="street_address">Street Address</string>
    <string name="shop_no">Enter Shop Number </string>
    <string name="shop_act_no">Enter Shop Act Number </string>
    <string name="land_mark">Land Mark</string>
    <string name="district">District</string>
    <string name="state">State</string>
    <string name="update_my_profile">Update my profile</string>
    <string name="save_my_profile">Save my profile</string>
    <string name="location">LOCATION</string>
    <string name="change_location">Change Location?</string>
    <string name="view_my_profile">View My Profile</string>
    <string name="edit_my_profile">Edit My Profile</string>
    <string name="save_profile">Save my profile</string>
    <string name="sort_by_category">Sort By Category</string>
    <string name="sort_by_sub_category">Sort By Sub Category</string>
    <string name="sort_by_product">Sort By Product</string>
    <string name="available_other_sizes">Available in %1$s other sizes</string>
    <string name="in_active">In Active</string>
    <string name="delivered_in"> Delivered %1$s hour.</string>
    <string name="after_discount">After discount: %.2f</string>
    <string name="delivery_in">Delivery in</string>
    <string name="delivery_in_days_text">Delivery in days</string>
    <string name="banck_details_text">Bank Details</string>
    <string name="delivery_in_days">Delivery in %1$s days</string>
    <string name="delivery_in_1_day">Delivery in 1 day</string>
    <string name="delivery_in_same_day">Delivery on the same day.</string>
    <string name="product">Product</string>
    <string name="add_new_product">Add new product</string>
    <string name="request_new_product">Create product</string>
    <string name="update">Update</string>
    <string name="product_not_available">Product not available?</string>
    <string name="item_added">You have added one product to your inventory.</string>
    <string name="apply">Apply</string>
    <string name="request_new_product_msg">Your request was successfully submitted. \n Once request is approved by the system you will get the confirmation Notification.</string>
    <string name="save_details">Save Details</string>
    <string name="pin_code">Pin code</string>
    <string name="city">City</string>
    <string name="delivery_radius">Delivery radius in km</string>
    <string name="my_wallet">My Wallet</string>
    <string name="shopping">Shopping</string>
    <string name="my_wish_list">My Wish List</string>
    <string name="my_khata">My Khata</string>
    <string name="support">Support</string>
    <string name="cart">Cart</string>
    <string name="app_logo">Rokad</string>
</resources>