<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorPrimary">

    <include layout="@layout/navigation_header" />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_version_field"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_margin="10dp"
            android:layout_centerHorizontal="true"
            android:gravity="end"
            android:minHeight="40dp"
            android:textColor="@color/white" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@id/tv_version_field">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/retailer_orders"
                    style="@style/nv_item_view"
                    android:drawableStart="@drawable/orders"
                    android:text="@string/my_orders" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/retailer_inventory"
                    style="@style/nv_item_view"
                    android:drawableStart="@drawable/inventory_nv"
                    android:text="@string/inventory" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/customer_shopping"
                    style="@style/nv_item_view"
                    android:drawableStart="@drawable/inventory_nv"
                    android:text="@string/shopping" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/customer_orders"
                    style="@style/nv_item_view"
                    android:drawableStart="@drawable/inventory_nv"
                    android:text="@string/my_orders" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/my_wish_list"
                    style="@style/nv_item_view"
                    android:drawableStart="@drawable/inventory_nv"
                    android:text="@string/my_wish_list" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/my_wallet"
                    style="@style/nv_item_view"
                    android:drawableStart="@drawable/password_nv"
                    android:text="@string/my_wallet" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/my_khata"
                    style="@style/nv_item_view"
                    android:drawableStart="@drawable/password_nv"
                    android:text="@string/my_khata" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/support"
                    style="@style/nv_item_view"
                    android:drawableStart="@drawable/password_nv"
                    android:text="@string/support" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/change_password"
                    style="@style/nv_item_view"
                    android:drawableStart="@drawable/password_nv"
                    android:text="@string/change_password" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/logout"
                    style="@style/nv_item_view"
                    android:drawableStart="@drawable/logout_nv"
                    android:text="@string/logout" />
            </LinearLayout>
        </ScrollView>
    </RelativeLayout>
</LinearLayout>