
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ScrollView
        android:layout_alignParentTop="true"
        android:layout_above="@+id/add_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context="com.rmart.profile.views.ViewMyProfileFragment">
            <LinearLayout
                android:id="@+id/retailer_view"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <androidx.appcompat.widget.AppCompatTextView
                    android:visibility="gone"
                    android:text="@string/retailer_details"
                    style="@style/my_profile_title"
                    android:layout_width="match_parent"
                    android:background="@color/colorPrimary"
                    android:layout_marginTop="0dp"/>
                <androidx.appcompat.widget.AppCompatEditText
                    android:hint="@string/enter_your_business_name"
                    android:id="@+id/shop_name"
                    android:drawableStart="@drawable/user"
                    style="@style/my_profile_tv"
                    android:inputType="text"/>
                <androidx.appcompat.widget.AppCompatEditText
                    android:hint="@string/enter_your_pan_number"
                    android:id="@+id/pan_number"
                    android:drawableStart="@drawable/user"
                    style="@style/my_profile_tv"/>
                <androidx.appcompat.widget.AppCompatEditText
                    android:hint="@string/enter_your_gst_number"
                    android:id="@+id/gst_number"
                    android:drawableStart="@drawable/user"
                    style="@style/my_profile_tv"
                    android:inputType="text"/>
                <androidx.appcompat.widget.AppCompatEditText
                    android:hint="@string/shop_no"
                    android:id="@+id/shop_no"
                    android:drawableStart="@drawable/user"
                    style="@style/my_profile_tv"
                    android:inputType="text"/>
                <androidx.appcompat.widget.AppCompatEditText
                    android:hint="@string/delivery_radius"
                    android:id="@+id/delivery_radius"
                    android:drawableStart="@drawable/user"
                    style="@style/my_profile_tv"
                    android:inputType="number"/>
            </LinearLayout>

            <androidx.appcompat.widget.AppCompatEditText
                android:hint="@string/street_address"
                android:id="@+id/street_address"
                android:drawableStart="@drawable/user"
                style="@style/my_profile_tv"
                android:inputType="text"/>
            <androidx.appcompat.widget.AppCompatEditText
                android:hint="@string/city"
                android:id="@+id/city"
                android:drawableStart="@drawable/user"
                style="@style/my_profile_tv"
                android:inputType="text"/>
            <androidx.appcompat.widget.AppCompatEditText
                android:visibility="gone"
                android:hint="@string/district"
                android:id="@+id/district"
                android:drawableStart="@drawable/user"
                style="@style/my_profile_tv"
                android:inputType="text"/>
            <androidx.appcompat.widget.AppCompatEditText
                android:hint="@string/state"
                android:id="@+id/state"
                android:drawableStart="@drawable/user"
                style="@style/my_profile_tv"
                android:inputType="text"/>

            <androidx.appcompat.widget.AppCompatEditText
                android:hint="@string/pin_code"
                android:id="@+id/pin_code"
                android:drawableStart="@drawable/user"
                style="@style/my_profile_tv"
                android:maxLength="9"
                android:inputType="number"/>

            <!--<RelativeLayout
                android:layout_marginTop="8dp"
                android:layout_width="match_parent"
                android:layout_height="300dp">
                <FrameLayout
                    android:id="@+id/map_view"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>
                <Button
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentEnd="true"
                    android:layout_margin="16dp"
                    android:padding="16dp"
                    android:background="@drawable/submit_button_bg"
                    android:id="@+id/update_location"
                    android:textColor="@color/white"
                    android:fontFamily="@font/roboto_bold"
                    android:text="@string/change_location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </RelativeLayout>-->
        </LinearLayout>
    </ScrollView>
    <androidx.appcompat.widget.AppCompatButton
        android:layout_alignParentBottom="true"
        android:id="@+id/add_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save_details"
        android:background="@drawable/product_edit"
        android:textColor="@color/white"
        android:layout_margin="8dp"
        />
</RelativeLayout>
