<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_margin="8dp"
    card_view:cardCornerRadius="8dp"
    card_view:cardElevation="8dp">
    <LinearLayout
        android:layout_margin="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <androidx.appcompat.widget.AppCompatTextView
            android:hint="@string/street_address"
            android:id="@+id/street_address"
            android:drawableStart="@drawable/user"
            style="@style/my_profile_tv"
            android:inputType="text"/>
        <androidx.appcompat.widget.AppCompatTextView
            android:hint="@string/shop_no"
            android:id="@+id/shop_no"
            android:drawableStart="@drawable/user"
            style="@style/my_profile_tv"
            android:inputType="text"/>
        <androidx.appcompat.widget.AppCompatTextView
            android:hint="@string/land_mark"
            android:id="@+id/land_mark"
            android:drawableStart="@drawable/user"
            style="@style/my_profile_tv"
            android:inputType="text"/>
        <androidx.appcompat.widget.AppCompatTextView
            android:hint="@string/district"
            android:id="@+id/district"
            android:drawableStart="@drawable/user"
            style="@style/my_profile_tv"
            android:inputType="text"/>
        <androidx.appcompat.widget.AppCompatTextView
            android:hint="@string/state"
            android:id="@+id/state"
            android:drawableStart="@drawable/user"
            style="@style/my_profile_tv"
            android:inputType="text"/>
    </LinearLayout>
</androidx.cardview.widget.CardView>

