<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/badge_menu"
        android:title="@string/cart"
        app:actionLayout="@layout/badge_menu"
        app:showAsAction="always" />
    <item
        android:id="@+id/call"
        android:icon="@drawable/phone"
        app:showAsAction="always"
        app:actionLayout="@layout/call_icon"
        android:title="call" />

    <item
        android:id="@+id/app_logo"
        android:title="@string/app_logo"
        app:actionLayout="@layout/app_logo"
        app:showAsAction="always" />

    <item
        android:id="@+id/my_wallet"
        android:title="@string/my_wallet"
        app:actionLayout="@layout/wallet"
        app:showAsAction="always" />


</menu>