
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/authentication_bg_2"
        android:padding="16dp"
        android:layout_alignParentTop="true"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            style="@style/AuthenticationHeader"
            android:text="@string/forgot_password"/>
        <com.rmart.baseclass.views.CustomEditTextWithErrorText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/smartphone"
            android:hint="@string/hint_mobile_number"
            android:inputType="number"
            android:maxLength="10"
            app:error_trxt="@string/error_mobile_number"
            />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/forgot_password"
            android:layout_marginTop="64dp"
            android:layout_width="match_parent"
            android:textColor="@color/white"
            android:background="@drawable/submit_button_bg"
            android:layout_height="@dimen/field_height"
            android:textSize="@dimen/text_regular_size"
            android:text="@string/send_otp"
            />

    </LinearLayout>