<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:gravity="center"
    android:padding="20dp"
    tools:context="com.rmart.inventory.views.MyCategoryListFragment">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/choose_category"
        android:drawableStart="@drawable/user"
        android:drawableEnd="@drawable/down_arrow"
        android:hint="@string/choose_category"
        style="@style/upload_product_item_field"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/choose_sub_category"
        android:drawableStart="@drawable/user"
        android:hint="@string/choose_sub_category"
        android:drawableEnd="@drawable/down_arrow"
        style="@style/upload_product_item_field"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/choose_product"
        android:drawableStart="@drawable/user"
        android:hint="@string/choose_product"
        android:drawableEnd="@drawable/down_arrow"
        style="@style/upload_product_item_field"/>

    <androidx.appcompat.widget.AppCompatButton
        android:layout_marginTop="16dp"
        android:id="@+id/save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/apply"
        android:textColor="@color/white"
        android:paddingStart="50dp"
        android:paddingEnd="50dp"
        android:textSize="16sp"
        android:fontFamily="@font/roboto_regular"
        android:background="@drawable/product_edit"/>
</LinearLayout>