<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/authentication_bg_2"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:gravity="top|center_horizontal"
    tools:context="com.rmart.authentication.views.OTPFragment">

    <TextView
        android:layout_marginTop="40dp"
        android:text="@string/verification_code"
        android:textColor="@color/white"
        android:textSize="@dimen/text_regular_size"
        android:fontFamily="@font/roboto_bold"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"/>
    <TextView
        android:layout_margin="64dp"
        android:gravity="center"
        android:layout_marginTop="40dp"
        android:text="@string/verification_code_mobile_hint"
        android:textColor="@color/white"
        android:textSize="@dimen/text_regular_size"
        android:fontFamily="@font/roboto_bold"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"/>


    <com.rmart.baseclass.views.CustomEditTextWithErrorText
        android:id="@+id/otp"
        android:layout_height="wrap_content"
        android:layout_width="300dp"
        android:gravity="center"
        android:layout_marginTop="40dp"
        android:hint="@string/otp"
        android:textColor="@color/white"
        android:textSize="32sp"
        android:fontFamily="@font/roboto_bold"/>

    <TextView
        android:id="@+id/resend"
        android:textColor="@color/white"
        android:text="@string/resend_otp"
        android:layout_margin="64dp"
        android:textSize="@dimen/text_regular_size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</LinearLayout>