<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:gravity="top|center_horizontal"
    tools:context="com.rmart.authentication.views.OTPFragment">

    <TextView
        android:layout_marginTop="40dp"
        android:text="@string/verification_code"
        android:textColor="@color/black"
        android:textSize="@dimen/text_regular_size"
        android:fontFamily="@font/roboto_bold"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"/>
    <TextView
        android:layout_margin="64dp"
        android:gravity="center"
        android:layout_marginTop="40dp"
        android:text="@string/verification_code_mobile_hint"
        android:textColor="@color/gray"
        android:textSize="@dimen/text_regular_size"
        android:fontFamily="@font/roboto_bold"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"/>


    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/received_otp"
        android:drawableStart="@drawable/user"
        android:hint="@string/otp"
        style="@style/upload_product_item_field"
        android:minHeight="150dp"
        android:inputType="number|numberSigned"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="60dp"
        android:layout_marginBottom="40dp"/>

    <TextView
        android:id="@+id/resend"
        android:textColor="@color/black"
        android:text="@string/resend_otp"
        android:layout_margin="64dp"
        android:textSize="@dimen/text_regular_size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</LinearLayout>