<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:background="@drawable/item_icon_bg"
    android:padding="8dp"
    android:layout_marginTop="16dp"
    android:layout_marginStart="16dp"
    android:layout_marginEnd="16dp"
    android:weightSum="3">
    <ImageView
        android:layout_width="0dp"
        android:layout_weight="1"
        android:src="@drawable/item_image"
        android:layout_height="match_parent"
        />
    <LinearLayout
        android:layout_width="0dp"
        android:layout_weight="2"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            style="@style/item_title"
            android:id="@+id/title"
            android:text="@string/category"/>
        <TextView
            android:id="@+id/sub_title_1"
            style="@style/item_sub_title"
            android:text="@string/sub_title_1"/>
        <TextView
            android:id="@+id/sub_title_2"
            style="@style/item_sub_title"
            android:text="@string/sub_title_2"/>

    </LinearLayout>

</LinearLayout>
